tests/org.eclipse.php.core.tests/workspace/errors/php53/unfinishedClassDecl2.pdtt
--TEST--
Test unfinished class declaration error reporting
--FILE--
<?php
class A {
5
}
?>
--EXPECT--
[line=3, start=16, end=17] syntax error, unexpected '5', expecting 'function'